--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Shopify.shop = "953c88-59.myshopify.com";
 Shopify.locale = "en";
 Shopify.currency = {"active":"USD","rate":"1.0"};
 Shopify.country = "US";
-Shopify.theme = {"name":"shrine-theme","id":173224198437,"schema_name":"Shrine","schema_version":"1.6.0","theme_store_id":null,"role":"main"};
+//Shopify.theme = {"name":"shrine-theme","id":173224198437,"schema_name":"Shrine","schema_version":"1.6.0","theme_store_id":null,"role":"main"};
 Shopify.theme.handle = "null";
 Shopify.theme.style = {"id":null,"handle":null};
 Shopify.cdnHost = "kovaria.com/cdn";
@@ -816,7 +816,7 @@ window.TriplePixelData={TripleName:"953c88-59.myshopify.com",ver:"2.16",plat:"SH
         document.getElementsByTagName('head')[0].appendChild(eventsListenerScript);
 
 })();</script>
-<script
+<!-- <script
   defer
   src="https://kovaria.com/cdn/shopifycloud/perf-kit/shopify-perf-kit-2.0.0.min.js"
   data-application="storefront-renderer"
@@ -829,7 +829,7 @@ window.TriplePixelData={TripleName:"953c88-59.myshopify.com",ver:"2.16",plat:"SH
   data-monorail-region="shop_domain"
   data-resource-timing-sampling-rate="10"
   data-shs="true"
-></script>
+></script> -->
 </head>
 
   <body class="gradient">
