--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@ KiwiSizing.data = {
 <meta name="twitter:title" content="TheraWrap™">
 <meta name="twitter:description" content="Kovaria">
 
-
+<!-- 
     <script src="//kovaria.com/cdn/shop/t/5/assets/constants.js?v=165488195745554878101732158337" defer="defer"></script>
     <script src="//kovaria.com/cdn/shop/t/5/assets/pubsub.js?v=2921868252632587581732158337" defer="defer"></script>
     <script src="//kovaria.com/cdn/shop/t/5/assets/global.js?v=77203367985599398841732158337" defer="defer"></script>
     <script src="//kovaria.com/cdn/shop/t/5/assets/jquery.js?v=39628375719901859641732158337" defer="defer"></script>
-    <script src="//kovaria.com/cdn/shop/t/5/assets/slick.min.js?v=169510929036442686281732158337" defer="defer"></script>
+    <script src="//kovaria.com/cdn/shop/t/5/assets/slick.min.js?v=169510929036442686281732158337" defer="defer"></script> -->
     <script>window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');</script><meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/86972072229/digital_wallets/dialog">
 <meta name="shopify-checkout-api-token" content="ce6006e904c507b032e3c1197129ef2e">
 <meta id="in-context-paypal-metadata" data-shop-id="86972072229" data-venmo-supported="false" data-environment="production" data-locale="en_US" data-paypal-v4="true" data-currency="USD">
